--- a/frontend/src/assets/scss/_hero.scss
+++ b/frontend/src/assets/scss/_hero.scss
@@ -94,3 +94,21 @@
         }
     }
 }
+
+
+.template__background{
+    display: flex;
+    align-items: center;
+    position: relative;
+    background-image: url("../images/desktop.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 17.5rem;
+
+    &__content {
+        width: 100%;
+        height: 50vh;
+    }
+
+}
