--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,3 +10,6 @@
 @import "./assets/scss/form";
 
 
+table {
+     width: 100%;
+}
